Aded one more entry to the ObjArray

--- a/Gallery.html
+++ b/Gallery.html
@@ -59,6 +59,12 @@
                 "lead":"Increase temperatures are leading to drier terrain which is prime fuel for...",
                 "img":"https://skepticalscience.com//pics/Wildfire-ArcticCircle-Sweden-2018.jpg",
                 "link":"account.html"
+            },
+            {
+                "title":"Plastic in the ocean",
+                "lead":"Marine life are threatened as plastic waste continues to gather in the worlds oceans...",
+                "img":"https://www.sciencenews.org/sites/default/files/2019/01/main/articles/010219_LH_ocean-plastic_feat.jpg",
+                "link":"account.html"
             }
         ];
         var images = [
