Moved images to own folder renamed some pages to fit the rest

--- a/article.html
+++ b/article.html
@@ -59,7 +59,7 @@
 
   <div class="article">
     <h1> Plastic in Our Oceans</h1><br>
-    <img src="plastic.jpg" id="article-img" alt="turtle"> <br>
+    <img src="images/plastic.jpg" id="article-img" alt="turtle"> <br>
     <p>Our ocean and the array of species that call it home are succumbing to the poison of plastic. Examples abound, from the gray whale that died after stranding near Seattle in 2010 with more than 20 plastic bags, a golf ball, and other rubbish in its stomach to the harbor seal pup found dead on the Scottish island of Skye, its intestines fouled by a small piece of plastic wrapper. <br><br>
 
     According to the United Nations, at least 800 species worldwide are affected by marine debris, and as much as 80 percent of that litter is plastic. It is estimated that up to 13 million metric tons of plastic ends up in the ocean each year—the equivalent of a rubbish or garbage truck load’s worth every minute. Fish, seabirds, sea turtles, and marine mammals can become entangled in or ingest plastic debris, causing suffocation, starvation, and drowning. Humans are not immune to this threat: While plastics are estimated to take up to hundreds of years to fully decompose, some of them break down much quicker into tiny particles, which in turn end up in the seafood we eat. <br><br>
