--- a/polararticle.html
+++ b/polararticle.html
@@ -60,7 +60,7 @@
   <div class="article">
     <h1>Why is the Arctic Melting Faster than Antarctica?</h1><br>
     <h2><i>A recent report says the Arctic may be ice-free by 2040. The Antarctic is also melting, albeit far slower, and in a less regular pattern. Why do the two poles react so differently in the face of climate change?</h2></i>
-    <img src="antarctic.jpg" id="article-img" alt="antarctic"> <br>
+    <img src="images/antarctic.jpg" id="article-img" alt="antarctic"> <br>
 
     <p>First, the bad news: The Arctic is melting much faster than expected, and could even be ice-free in summer by the late 2030s, a report from the Arctic Council's Arctic Monitoring and Assessment Program suggests. Previous studies had forecast an ice-free North Pole in summer by mid-century. <br>
 While the outlook is bleak for the Arctic, there is a silver lining for the Antarctic: The ice is melting at a slower rate than previously thought. Although glacier flow has increased since the 1990s, scientists from University of Leeds have found the melting rate to be only around a third of what was previously projected. <br>
