--- a/home.html
+++ b/home.html
@@ -16,11 +16,12 @@
 </head>
 
 <body>
+
   <!--Navbar-->
   <nav class="navbar navbar-light navbar-1 white">
 
     <!-- Navbar brand -->
-    <a class="navbar-brand" href="#">Save the Environment</a>
+    <a class="navbar-brand" href="home.html">Save the Environment</a>
 
     <!-- Collapse button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15"
@@ -32,16 +33,16 @@
       <!-- Links -->
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Gallery</a>
+          <a class="nav-link" href="gallery.html">Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Log In</a>
-        </li>
+          <a class="nav-link" href="account.html">Account Management</a>
+        </li>        
         <li class="nav-item">
-          <a class="nav-link" href="#">Account Management</a>
+          <a class="nav-link" href="signup.html">Sign Up</a>
         </li>        
       </ul>
     
@@ -62,139 +63,141 @@
       <p><a href="https://oceanconservancy.org/trash-free-seas/plastics-in-the-ocean/">Ocean Conservancy</a></p>
     </div>
     <div class="col-sm-8 text-left"> 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="images\airpolution.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="images\garbage.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="images\sign.jpg" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images\airpolution.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images\garbage.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images\sign.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+      </div>
       <h1>Climate Change</h1>
       <p>Climate change is any long-term change in the statistics of weather over periods of time that range from decades to millions of years. It can express itself as a change in the mean weather conditions, the probability of extreme conditions, or in any other part of the statistical distribution of weather. Climate change may occur in a specific region, or across the whole Earth.</p>
       <hr>
       <h2>To Learn More</h2>
-      <p><a href="#">Plastic in Our Oceans</a></p>
-      <p><a href="#">Melting Arctic</a></p>
+      <p><a href="plasticarticle.html">Plastic in Our Oceans</a></p>
+      <p><a href="polararticle.html">Melting Arctic</a></p>
     </div>
     <div class="col-sm-2 sidenav">
-      <div class="well">
-      </div>
+      <div class="well"></div>
     </div>
   </div>
 </div>
 
 <footer class="container-fluid text-center">
-<footer class="page-footer font-small mdb-color grey lighten-3">
+  <footer class="page-footer font-small mdb-color grey lighten-3">
 
-  <!-- Footer Links -->
-  <div class="container text-center text-md-left">
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left">
 
-    <!-- Grid row -->
-    <div class="row">
+      <!-- Grid row -->
+      <div class="row">
 
-      <!-- Grid column -->
-      <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
 
-        <!-- Content -->
-        <h5 class="font-weight-bold text-uppercase mb-4">Follow Us</h5>
-        <p id="footerp"><i class="fab fa-twitter-square fa-1x"></i> <a href="#!"> Twitter</a><p>
-        <p id="footerp"><i class="fab fa-facebook-square fa-1x"></i> <a href="#!"> Facebook</a></p>
-        <p id="footerp"><i class="fab fa-linkedin fa-1x"></i> <a href="#!"> LinkedIn</a></p>
+          <!-- Content -->
+          <h5 class="font-weight-bold text-uppercase mb-4">Follow Us</h5>
+          <p id="footerp"><i class="fab fa-twitter-square fa-1x"></i> <a href="#!"> Twitter</a><p>
+          <p id="footerp"><i class="fab fa-facebook-square fa-1x"></i> <a href="#!"> Facebook</a></p>
+          <p id="footerp"><i class="fab fa-linkedin fa-1x"></i> <a href="#!"> LinkedIn</a></p>
+
+        </div>
+        <!-- Grid column -->
+
+        <hr class="clearfix w-100 d-md-none">
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 mx-auto my-md-4 my-0 mt-4 mb-1">
+
+          <!-- Links -->
+          <h5 class="font-weight-bold text-uppercase mb-4">About</h5>
+          <ul class="list-unstyled">
+            <li>
+              <p>
+                <a href="aboutus.html">About Us</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="contactus.html">Contact Us</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="gallery.html">Gallery</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="ToS.html">Terms of Service</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="signup.html">Sign Up</a>
+              </p>
+            </li>
+          </ul>
+
+        </div>
+        <!-- Grid column -->
+
+        <hr class="clearfix w-100 d-md-none">
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
+
+          <!-- Contact details -->
+          <h5 class="font-weight-bold text-uppercase mb-4">Address</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <p id="footerp">
+                <i class="fas fa-home mr-3"></i> 3801 W Temple Ave, Pomona, CA 91768</p>
+            </li>
+            <li>
+              <p id="footerp">
+                <i class="fas fa-envelope mr-3"></i> billybronco@cpp.edu</p>
+            </li>
+            <li>
+              <p id="footerp">
+                <i class="fas fa-phone mr-3"></i> + 909 869 7659</p>
+            </li>
+            <li>
+              <p id="footerp">
+                <i class="fas fa-print mr-3"></i> + 123 456 7890</p>
+            </li>
+          </ul>
+
+        </div>
+        <!-- Grid column -->
 
       </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-2 col-lg-2 mx-auto my-md-4 my-0 mt-4 mb-1">
-
-        <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mb-4">About</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <p>
-              <a href="#!">About Us</a>
-            </p>
-          </li>
-          <li>
-            <p>
-              <a href="#!">Contact Us</a>
-            </p>
-          </li>
-          <li>
-            <p>
-              <a href="#!">Gallery</a>
-            </p>
-            <p>
-              <a href="#!">Privacy</a>
-            </p>
-             <p>
-              <a href="ToS.html">Terms of Service</a>
-            </p>
-          </li>
-        </ul>
-
-      </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
-
-        <!-- Contact details -->
-        <h5 class="font-weight-bold text-uppercase mb-4">Address</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <p id="footerp">
-              <i class="fas fa-home mr-3"></i> 3801 W Temple Ave, Pomona, CA 91768</p>
-          </li>
-          <li>
-            <p id="footerp">
-              <i class="fas fa-envelope mr-3"></i> billybronco@cpp.edu</p>
-          </li>
-          <li>
-            <p id="footerp">
-              <i class="fas fa-phone mr-3"></i> + 909 869 7659</p>
-          </li>
-          <li>
-            <p id="footerp">
-              <i class="fas fa-print mr-3"></i> + 123 456 7890</p>
-          </li>
-        </ul>
-
-      </div>
-      <!-- Grid column -->
+      <!-- Grid row -->
 
     </div>
-    <!-- Grid row -->
+    <!-- Footer Links -->
 
-  </div>
-  <!-- Footer Links -->
-
-</footer>
+  </footer>
 </footer>
 
   <!-- SCRIPTS -->
