Refactored aboutus page to use only custom.css

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Save the Environment</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="custom.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/mdb.min.css" rel="stylesheet">
-</head>
-
-<body>
-
-  <!--Navbar-->
-  <nav class="navbar navbar-light navbar-1 white">
+<html>
+  <body>
+    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta http-equiv="x-ua-compatible" content="ie=edge">
+      <title>About Us</title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+      <link rel="stylesheet" href="custom.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <link href="css/mdb.min.css" rel="stylesheet">
+    </head>
+    
+    <!--Navbar-->
+    <nav class="navbar navbar-light navbar-1 white">
 
     <!-- Navbar brand -->
     <a class="navbar-brand" href="home.html">Save the Environment</a>
@@ -50,53 +49,15 @@
   </nav>
   <!--/.Navbar-->
   
-  <div class="container-fluid text-center">    
-    <div class="row content">
-      <div class="col-sm-2 sidenav">
-        <h2>Resources</h2>
-        <p><a href="https://climate.nasa.gov">Nasa</a></p>
-        <p><a href="https://www.globalchange.gov/climate-change">Global Change</a></p>
-        <p><a href="https://www.ipcc.ch">Intergovernmental Panel on Climate Change</a></p>
-        <p><a href="https://oceanconservancy.org/trash-free-seas/plastics-in-the-ocean/">Ocean Conservancy</a></p>
-      </div>
-      <div class="col-sm-8 text-left"> 
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="images\airpolution.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="images\garbage.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="images\sign.jpg" class="d-block w-100" alt="...">
-            </div>
-          </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-        </div>
-        <h1>Climate Change</h1>
-        <p>Climate change is any long-term change in the statistics of weather over periods of time that range from decades to millions of years. It can express itself as a change in the mean weather conditions, the probability of extreme conditions, or in any other part of the statistical distribution of weather. Climate change may occur in a specific region, or across the whole Earth.</p>
-        <hr>
-        <h2>To Learn More</h2>
-        <p><a href="plasticarticle.html">Plastic in Our Oceans</a></p>
-        <p><a href="polararticle.html">Melting Arctic</a></p>
-      </div>
-      <div class="col-sm-2 sidenav">
-        <div class="well"></div>
-      </div>
-    </div>
+  <div class="card">
+    <img src="https://i.pinimg.com/736x/d1/91/c9/d191c9c75bb6b718f5b6d9158eec23b6.jpg" alt="Jane" style="width:100%">
+    <h1>Jane Doe</h1>
+    <p class="title">CEO & Founder, Save The Enviornnment!</p>
+    <p>Harvard University</p>
+    <a href="#"><i class="fab fa-facebook-square fa-1x"></i></a> 
+    <a href="#"><i class="fab fa-linkedin fa-1x"></i></a> 
+    <a href="#"><i class="fab fa-twitter-square fa-1x"></i></a> 
+    <p><button id="btnContact">Contact</button></p>
   </div>
 
   <footer class="container-fluid text-center">
@@ -196,8 +157,7 @@
 
     </footer>
   </footer>
-
-  <!-- SCRIPTS -->
+         <!-- SCRIPTS -->
   <!-- JQuery -->
   <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
   <!-- Bootstrap tooltips -->
@@ -206,5 +166,3 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
-</body>
-</html>
