--- a/contactus.html
+++ b/contactus.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Contact Us</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+  <link href="css/mdb.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="custom.css">
+</head>
+  
 <body>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="PHASE7A.css">
-    <link rel="stylesheet" href="custom.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/mdb.min.css" rel="stylesheet">
-  </head>
-
+  
   <!--Navbar-->
   <nav class="navbar navbar-light navbar-1 white">
 
@@ -49,19 +48,19 @@
   
     </nav>
     <!--/.Navbar-->
-  
+
   <h3>Contact Form</h3>
 
-  <div class="container">
-    <form action="/action_page.php">
+  <div class="container" id="infoH">
+    <form action="#">
       <label for="fname">First Name</label>
-      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+      <input class="gabby" type="text" id="fname" name="firstname" placeholder="Your name..">
   
       <label for="lname">Last Name</label>
-      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+      <input class="gabby" type="text" id="lname" name="lastname" placeholder="Your last name..">
   
       <label for="country">Country</label>
-      <select id="country" name="country">
+      <select class="gabby" id="country" name="country">
         <option value="australia">Australia</option>
         <option value="canada">Canada</option>
         <option value="usa">USA</option>
@@ -70,118 +69,109 @@
       </select>
   
       <label for="subject">Subject</label>
-      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+      <textarea class="gabby" id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
   
-      <input type="submit" value="Submit">
+      <input type="submit" value="Submit" class="btn btn-success">
     </form>
   </div>
 
-  <footer class="container-fluid text-center">
-    <footer class="page-footer font-small mdb-color grey lighten-3">
+<footer class="container-fluid text-center">
+  <footer class="page-footer font-small mdb-color grey lighten-3">
 
-      <!-- Footer Links -->
-      <div class="container text-center text-md-left">
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left">
 
-        <!-- Grid row -->
-        <div class="row">
+      <!-- Grid row -->
+      <div class="row">
 
-          <!-- Grid column -->
-          <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
 
-            <!-- Content -->
-            <h5 class="font-weight-bold text-uppercase mb-4">Follow Us</h5>
-            <p id="footerp"><i class="fab fa-twitter-square fa-1x"></i> <a href="#!"> Twitter</a><p>
-            <p id="footerp"><i class="fab fa-facebook-square fa-1x"></i> <a href="#!"> Facebook</a></p>
-            <p id="footerp"><i class="fab fa-linkedin fa-1x"></i> <a href="#!"> LinkedIn</a></p>
-
-          </div>
-          <!-- Grid column -->
-
-          <hr class="clearfix w-100 d-md-none">
-
-          <!-- Grid column -->
-          <div class="col-md-2 col-lg-2 mx-auto my-md-4 my-0 mt-4 mb-1">
-
-            <!-- Links -->
-            <h5 class="font-weight-bold text-uppercase mb-4">About</h5>
-            <ul class="list-unstyled">
-              <li>
-                <p>
-                  <a href="aboutus.html">About Us</a>
-                </p>
-              </li>
-              <li>
-                <p>
-                  <a href="contactus.html">Contact Us</a>
-                </p>
-              </li>
-              <li>
-                <p>
-                  <a href="gallery.html">Gallery</a>
-                </p>
-              </li>
-              <li>
-                <p>
-                  <a href="ToS.html">Terms of Service</a>
-                </p>
-              </li>
-              <li>
-                <p>
-                  <a href="signup.html">Sign Up</a>
-                </p>
-              </li>
-            </ul>
-
-          </div>
-          <!-- Grid column -->
-
-          <hr class="clearfix w-100 d-md-none">
-
-          <!-- Grid column -->
-          <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
-
-            <!-- Contact details -->
-            <h5 class="font-weight-bold text-uppercase mb-4">Address</h5>
-
-            <ul class="list-unstyled">
-              <li>
-                <p id="footerp">
-                  <i class="fas fa-home mr-3"></i> 3801 W Temple Ave, Pomona, CA 91768</p>
-              </li>
-              <li>
-                <p id="footerp">
-                  <i class="fas fa-envelope mr-3"></i> billybronco@cpp.edu</p>
-              </li>
-              <li>
-                <p id="footerp">
-                  <i class="fas fa-phone mr-3"></i> + 909 869 7659</p>
-              </li>
-              <li>
-                <p id="footerp">
-                  <i class="fas fa-print mr-3"></i> + 123 456 7890</p>
-              </li>
-            </ul>
-
-          </div>
-          <!-- Grid column -->
+          <!-- Content -->
+          <h5 class="font-weight-bold text-uppercase mb-4">Follow Us</h5>
+          <p id="footerp"><i class="fab fa-twitter-square fa-1x"></i> <a href="#!"> Twitter</a><p>
+          <p id="footerp"><i class="fab fa-facebook-square fa-1x"></i> <a href="#!"> Facebook</a></p>
+          <p id="footerp"><i class="fab fa-linkedin fa-1x"></i> <a href="#!"> LinkedIn</a></p>
 
         </div>
-        <!-- Grid row -->
+        <!-- Grid column -->
+
+        <hr class="clearfix w-100 d-md-none">
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 mx-auto my-md-4 my-0 mt-4 mb-1">
+
+          <!-- Links -->
+          <h5 class="font-weight-bold text-uppercase mb-4">About</h5>
+          <ul class="list-unstyled">
+            <li>
+              <p>
+                <a href="aboutus.html">About Us</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="contactus.html">Contact Us</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="gallery.html">Gallery</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="ToS.html">Terms of Service</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="signup.html">Sign Up</a>
+              </p>
+            </li>
+          </ul>
+
+        </div>
+        <!-- Grid column -->
+
+        <hr class="clearfix w-100 d-md-none">
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
+
+          <!-- Contact details -->
+          <h5 class="font-weight-bold text-uppercase mb-4">Address</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <p id="footerp">
+                <i class="fas fa-home mr-3"></i> 3801 W Temple Ave, Pomona, CA 91768</p>
+            </li>
+            <li>
+              <p id="footerp">
+                <i class="fas fa-envelope mr-3"></i> billybronco@cpp.edu</p>
+            </li>
+            <li>
+              <p id="footerp">
+                <i class="fas fa-phone mr-3"></i> + 909 869 7659</p>
+            </li>
+            <li>
+              <p id="footerp">
+                <i class="fas fa-print mr-3"></i> + 123 456 7890</p>
+            </li>
+          </ul>
+
+        </div>
+        <!-- Grid column -->
 
       </div>
-      <!-- Footer Links -->
+      <!-- Grid row -->
 
-    </footer>
+    </div>
+    <!-- Footer Links -->
+
   </footer>
+</footer>
 
-  <!-- SCRIPTS -->
-  <!-- JQuery -->
-  <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-  <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="js/popper.min.js"></script>
-  <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
 </body>
 </html>
