--- a/signup.html
+++ b/signup.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Terms of Service</title>
+  <title>Sign Here!</title>
+  <link href="PHASE7.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -13,11 +14,10 @@
   <link href="css/mdb.min.css" rel="stylesheet">
   <link rel="stylesheet" href="custom.css">
 </head>
-
 <body>
 
-<!--Navbar-->
-<nav class="navbar navbar-light navbar-1 white">
+  <!--Navbar-->
+  <nav class="navbar navbar-light navbar-1 white">
 
     <!-- Navbar brand -->
     <a class="navbar-brand" href="home.html">Save the Environment</a>
@@ -48,79 +48,62 @@
 
   </nav>
   <!--/.Navbar-->
-
-<div class="termsOfService">
-<h1>Welcome!</h1>
-
-<p>Please read these terms of service ("terms", "terms of service") carefully before using SavetheEnvironment website (the "service") operated by SavetheEnvironment ("us", 'we", "our").</p>
-
-<h2>Conditions of Use</h2>
-
-<p>We will provide their services to you, which are subject to the conditions stated below in this document. Every time you visit this website, use its services or make a purchase, you accept the following conditions. This is why we urge you to read them carefully.</p>
-
-<h2>Privacy Policy</h2>
-
-<p>Before you continue using our website we advise you to read our privacy policy [link to privacy policy] regarding our user data collection. It will help you better understand our practices.</p>
-
-<h2>Copyright</h2>
-
-<p>Content published on this website (digital downloads, images, texts, graphics, logos) is the property of SavetheEnvironment and/or its content creators and protected by international copyright laws. The entire compilation of the content found on this website is the exclusive property of [name], with copyright authorship for this compilation by SavetheEnvironment.</p>
-
-<h2>Communications</h2>
-
-<p>The entire communication with us is electronic. Every time you send us an email or visit our website, you are going to be communicating with us. You hereby consent to receive communications from us. If you subscribe to the news on our website, you are going to receive regular emails from us. We will continue to communicate with you by posting news and notices on our website and by sending you emails. You also agree that all notices, disclosures, agreements and other communications we provide to you electronically meet the legal requirements that such communications be in writing.</p>
-
-<h2>Applicable Law</h2>
-
-<p>By visiting this website, you agree that the laws of the United States of America, without regard to principles of conflict laws, will govern these terms of service, or any dispute of any sort that might come between SavetheEnvironment and you, or its business partners and associates.</p>
-
-<h2>Disputes</h2>
-
-<p>Any dispute related in any way to your visit to this website or to products you purchase from us shall be arbitrated by state or federal court of the United States of America and you consent to exclusive jurisdiction and venue of such courts.</p>
-
-<h2>Comments, Reviews, and Emails</h2>
-
-<p>Visitors may post content as long as it is not obscene, illegal, defamatory, threatening, infringing of intellectual property rights, invasive of privacy or injurious in any other way to third parties. Content has to be free of software viruses, political campaign, and commercial solicitation.<br>
-
-We reserve all rights (but not the obligation) to remove and/or edit such content. When you post your content, you grant SavetheEnvironment non-exclusive, royalty-free and irrevocable right to use, reproduce, publish, modify such content throughout the world in any media.</p>
-
-<h2>License and Site Access</h2>
-
-<p>We grant you a limited license to access and make personal use of this website. You are not allowed to download or modify it. This may be done only with written consent from us.</p>
-
-<h2>User Account</h2>
-
-<p>If you are an owner of an account on this website, you are solely responsible for maintaining the confidentiality of your private user details (username and password). You are responsible for all activities that occur under your account or password.<br>
-
-We reserve all rights to terminate accounts, edit or remove content and cancel orders in their sole discretion.
-  </p>
+  <div class="container">
+  <form action="action_page.php" style="border:1px solid #ccc">
+    <div class="container">
+      <h1>Sign In</h1>
+      <p>Please fill in this form to create an account.</p>
+      <hr>
+  
+      <label for="email"><b>Email</b></label>
+      <input type="text" class="gabby2" placeholder="Enter Email" name="email" required>
+  
+      <label for="psw"><b>Password</b></label>
+      <input type="password" class="gabby2" placeholder="Enter Password" name="psw" required>
+  
+      <label for="psw-repeat"><b>Repeat Password</b></label>
+      <input type="password" class="gabby2" placeholder="Repeat Password" name="psw-repeat" required>
+  
+      <label>
+        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+      </label>
+  
+      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+  
+      <div class="clearfix">
+        <button type="submit" class="btn btn-primary">Sign Up</button>
+        <button type="button" class="btn btn-secondary">Cancel</button>
+      </div>
+    </div>
+  </form>
   </div>
+
   <footer class="container-fluid text-center">
       <footer class="page-footer font-small mdb-color grey lighten-3">
-  
+
         <!-- Footer Links -->
         <div class="container text-center text-md-left">
-  
+
           <!-- Grid row -->
           <div class="row">
-  
+
             <!-- Grid column -->
             <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
-  
+
               <!-- Content -->
               <h5 class="font-weight-bold text-uppercase mb-4">Follow Us</h5>
               <p id="footerp"><i class="fab fa-twitter-square fa-1x"></i> <a href="#!"> Twitter</a><p>
               <p id="footerp"><i class="fab fa-facebook-square fa-1x"></i> <a href="#!"> Facebook</a></p>
               <p id="footerp"><i class="fab fa-linkedin fa-1x"></i> <a href="#!"> LinkedIn</a></p>
-  
+
             </div>
             <!-- Grid column -->
-  
+
             <hr class="clearfix w-100 d-md-none">
-  
+
             <!-- Grid column -->
             <div class="col-md-2 col-lg-2 mx-auto my-md-4 my-0 mt-4 mb-1">
-  
+
               <!-- Links -->
               <h5 class="font-weight-bold text-uppercase mb-4">About</h5>
               <ul class="list-unstyled">
@@ -150,18 +133,18 @@ We reserve all rights to terminate accounts, edit or remove content and cancel o
                   </p>
                 </li>
               </ul>
-  
+
             </div>
             <!-- Grid column -->
-  
+
             <hr class="clearfix w-100 d-md-none">
-  
+
             <!-- Grid column -->
             <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
-  
+
               <!-- Contact details -->
               <h5 class="font-weight-bold text-uppercase mb-4">Address</h5>
-  
+
               <ul class="list-unstyled">
                 <li>
                   <p id="footerp">
@@ -180,18 +163,18 @@ We reserve all rights to terminate accounts, edit or remove content and cancel o
                     <i class="fas fa-print mr-3"></i> + 123 456 7890</p>
                 </li>
               </ul>
-  
+
             </div>
             <!-- Grid column -->
-  
+
           </div>
           <!-- Grid row -->
-  
+
         </div>
         <!-- Footer Links -->
-  
+
       </footer>
     </footer>
-</body>
 
+</body>
 </html>
