Changed signup to signin and altered all links to match the change

--- a/signin.html
+++ b/signin.html
@@ -129,7 +129,7 @@
                 </li>
                 <li>
                   <p>
-                    <a href="signup.html">Sign Up</a>
+                    <a href="signin.html">Sign In</a>
                   </p>
                 </li>
               </ul>
