--- a/Detail.html
+++ b/Detail.html
@@ -102,7 +102,7 @@
                 </li>
                 <li>
                   <p>
-                    <a href="signup.html">Sign Up</a>
+                    <a href="signin.html">Sign In</a>
                   </p>
                 </li>
               </ul>
