--- a/ToS.html
+++ b/ToS.html
@@ -146,7 +146,7 @@ We reserve all rights to terminate accounts, edit or remove content and cancel o
                 </li>
                 <li>
                   <p>
-                    <a href="signup.html">Sign Up</a>
+                    <a href="signin.html">Sign In</a>
                   </p>
                 </li>
               </ul>
