--- a/aboutus.html
+++ b/aboutus.html
@@ -110,7 +110,7 @@
               </li>
               <li>
                 <p>
-                  <a href="signup.html">Sign Up</a>
+                  <a href="signin.html">Sign In</a>
                 </p>
               </li>
             </ul>
