--- a/polararticle.html
+++ b/polararticle.html
@@ -141,7 +141,7 @@ While it might be too early to see a trend, recent headlines are worrying. Level
                 </li>
                 <li>
                   <p>
-                    <a href="signup.html">Sign Up</a>
+                    <a href="signin.html">Sign In</a>
                   </p>
                 </li>
               </ul>
